--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main-container">
-        <h1 id="heading">Today's quiz</h1>
+        <h1 id="heading">Your quiz for today</h1>
         <div class="q-container">
             <h2 id="question-line">Your question</h2>
             <div class="options">
